Minor fix for ButtonGroupControl bottom spacing

--- a/src/components/button-group-control/editor.scss
+++ b/src/components/button-group-control/editor.scss
@@ -8,6 +8,7 @@
 	.maxi-base-control {
 		&__field {
 			width: 100%;
+			margin-bottom: 0;
 		}
 		&__label {
 			flex: 4;
